Add jvm to test