@@ -140,6 +140,9 @@ subprojects {
         systemProperty 'io.netty.allocator.smallCacheSize', '0'
         systemProperty 'io.netty.allocator.normalCacheSize', '0'
         systemProperty 'io.netty.allocator.maxCachedBufferCapacity', '0'
+
+        // make sure Powermockito would be happy
+        jvmArgs '--add-exports=java.xml/jdk.xml.internal=ALL-UNNAMED'
     }
 
     task intTest(type: Test) {
